<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.InformationActivity">
    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/btn_infoBack"
            android:src="@drawable/back"
            android:scaleType="centerInside"
            android:background="@drawable/button_back_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/tx_informationTitle"
            android:textColor="@color/mdtp_white"
            android:text="个人信息"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tx_name"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="姓名："
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:background="@drawable/edit_text_frame"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/tx_name"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_age"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/rl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tx_age"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:text="年龄："
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_age"
            android:background="@drawable/edit_text_frame"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/tx_age"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_gender"
        android:layout_below="@id/rl_age"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tx_gender"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:text="性别："
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_gender"
            android:background="@drawable/edit_text_frame"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/tx_gender"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/rl_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tx_phone"
            android:textSize="18sp"
            android:textColor="@color/text"
            android:text="手机："
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_phone"
            android:background="@drawable/edit_text_frame"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/tx_phone"
            android:layout_width="250dp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_below="@id/rl_phone"
        android:layout_width="match_parent"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_saveInfo"
            android:text="保存"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>