<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.AccountActivity">
    <RelativeLayout
        android:id="@+id/regist_head"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageButton
            android:src="@drawable/back"
            android:scaleType="centerInside"
            android:background="@drawable/button_back_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon" />
        <Button
            android:id="@+id/btn_registBack"
            android:textColor="@color/mdtp_white"
            android:text="注册"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <EditText
        android:id="@+id/et_username1"
        android:textSize="16sp"
        android:hint="用户名"
        android:layout_below="@+id/rl_accountTitle"
        android:layout_marginTop="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time" />
    <EditText
        android:id="@+id/et_password1"
        android:textSize="16sp"
        android:hint="密码（大于六位）"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_username1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time" />
    <EditText
        android:id="@+id/et_passwordAgain"
        android:textSize="16sp"
        android:hint="重复输入密码"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time" />
    <Button
        android:id="@+id/btn_regist1"
        android:text="注册"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="330dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/the70" />

</RelativeLayout>