...
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_textfield"
            android:hint="请输入用户名"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#ff444444"
            android:textColorHint="#ffcccccc"
            android:textSize="16sp" >
...
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_account"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_textfield"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="#ff444444"
            android:textColorHint="#ffcccccc"
...
